kie-maven-plugin: use takari-maven-plugin packaging
 * better alternative to the standard maven-plugin packaging.
   Requires less configuration in pom + by default adds support
   for integration testing

 * closes #233